adding @media query to css file

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <div id="main-container" class="container">
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-lg-8 col-md-8, col-sm-12" >
     <section class="main-section">
       <h1>About Me</h1>
 
@@ -40,7 +40,7 @@
 
     </section>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4 col-md-4 col-sm-12">
     <section class="sidebar">
       <div id="connect">
         <h2>Connect with Me</h2>
