--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
 
       <img src="images/Mostafa1.jpg" class="auth-image" alt="Your Name">
 
-      <p>  Hey there!! as you already know my name is Mostafa Sadek. I'm from Giza, Egypt.
-      i grow up in a small ity called Tanta, then moved to the big city when i was 10 years old. I enjoy playing soccer and i'm really good at it, and i also like going to the gym because i feel alive when i exercise. I moved to the US when i was 17 years old and I love it here.
-      </p>
+        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
 
-      <p> The reason I moved to the US is to eventually finish my education. The first time i got introduced to coding, I fail in love right away and only then I knew this is what i wanted to do for the rest of my life</p>
+        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
 
     </section>
     </div>
